[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/1719895.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/ThaleahFat.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/PlayAgain.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Assets/ThaleahFat.ttf"

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = SubResource( 9 )

[sub_resource type="Animation" id=3]
resource_name = "Attract"
length = 2.0
loop = true

[node name="Level" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.615686, 0.552941, 0.552941, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_left = 186.0
margin_top = 10.0
margin_right = 838.0
margin_bottom = 404.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
visible = false
margin_right = 652.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 34.0
margin_right = 652.0
margin_bottom = 394.0
rect_min_size = Vector2( 650, 350 )
custom_fonts/font = SubResource( 1 )
text = "madiun
vs
everybody"
align = 1
valign = 1
autowrap = true

[node name="Level 1" type="Button" parent="."]
margin_left = 428.0
margin_top = 132.0
margin_right = 590.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 4 )
text = "Level 1"
flat = true

[node name="Level 2" type="Button" parent="."]
margin_left = 425.0
margin_top = 207.0
margin_right = 596.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 5 )
text = "Level 2"
flat = true

[node name="Level 3" type="Button" parent="."]
margin_left = 426.0
margin_top = 277.0
margin_right = 597.0
margin_bottom = 327.0
custom_fonts/font = SubResource( 6 )
text = "Level 3"
flat = true

[node name="Level 4" type="Button" parent="."]
margin_left = 428.0
margin_top = 352.0
margin_right = 599.0
margin_bottom = 402.0
custom_fonts/font = SubResource( 7 )
text = "Level 4"
flat = true

[node name="Level 5" type="Button" parent="."]
margin_left = 426.0
margin_top = 428.0
margin_right = 597.0
margin_bottom = 478.0
custom_fonts/font = SubResource( 8 )
text = "Level 5"
flat = true

[node name="Quit" type="Button" parent="."]
margin_left = 39.0
margin_top = 22.0
margin_right = 147.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 10 )
text = "Back"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Attract"
anims/Attract = SubResource( 3 )

[connection signal="pressed" from="Level 1" to="." method="_on_Level_1_pressed"]
[connection signal="pressed" from="Level 2" to="." method="_on_Level_2_pressed"]
[connection signal="pressed" from="Level 3" to="." method="_on_Level_3_pressed"]
[connection signal="pressed" from="Level 4" to="." method="_on_Level_4_pressed"]
[connection signal="pressed" from="Level 5" to="." method="_on_Level_5_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
